adjust: header update method and swagger
